tests/invalid/out_of_scope_2.c
int main() {

    while (1) {
        int a = 2;
    }

    return a;
}
// ERROR: Line 7, Error 3001